--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,3 +24,5 @@ jobs:
           BRANCH: gh-pages
           FOLDER: out
           CLEAN: true
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
